2008-05-17  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* menu-bar.el (menu-bar-select-buffer): Reinsert it as msb.el use it.

2008-05-17  Jim Meyering  <meyering@redhat.com>

	* ido.el (ido-save-history): Do not emit a trailing newline at the
	end of the ido history file.

2008-05-16  John Paul Wallington  <jpw@pobox.com>

	* vc-dispatcher.el (top-level): Revert previous change: require cl
	when compiling.

2008-05-16  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc.el (vc-default-status-printer)
	(vc-default-prettify-state-info): Enhance the state prettyprinter
	to deall better with unknown states and indirect through it when
	painting vc-dir buffers.

2008-05-16  John Paul Wallington  <jpw@pobox.com>

	* vc-dispatcher.el (top-level): Don't require cl when compiling.
	(vc-dir-mode-map): Fix backquote.
	(vc-at-event): Doc fix.  Use `make-symbol' instead of `gensym'.

2008-05-16  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-write-region): Fix check for short
	track.  Reported by Glenn Morris <rgm@gnu.org>.

2008-05-16  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc.el: Remove my analysis of SCCS/RCS concurrency issues from
	the end of the file, it was good work at one time but has been
	stale since 1995 and may now be actively misleading.
	* vc-cvs.el (vc-cvs-status-extra-headers): Extract and display the
	CVS repository and module (assumptions for the latter a bit iffy).
	* vc-svn.el (vc-svn-status-extra-headers): Extract and display the
	SVN repository.

2008-05-16  Juanma Barranquero  <lekktu@gmail.com>

	* vc-rcs.el (vc-rcs-create-tag):
	* vc-sccs.el (vc-sccs-create-tag):
	Fix typo in error message and pass backend arg.

2008-05-15  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-file-name-for-operation): Add `make-temp-name'.

2008-05-15  Teodor Zlatanov  <tzz@lifelogs.com>

	* net/tramp.el: Load auth-source library.
	(tramp-read-passwd): Use it for password, not login.
